[tool.poetry]
name = "adventofcode-2022"
version = "0.1.0"
description = "Solutions for Advent Of Code 2022"
authors = ["Álvaro Santos Andrés <alvsanand@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "adventofcode_2022"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
